fixing how-to-use-stored-procedures project